--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+#Prisma CFI Generated Report from each Run
+/public/cfiReports/generated.pdf
