--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "dist/main.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/main.ts",
+      "dest": "/dist/main.js",
       "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
