--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/",
-      "methods": ["GET", "POST", "PUT", "DELETE"]
+      "dest": "/dist/main.js"
     }
   ]
 }
