--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "pcakage.json",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/src/main.js"
+      "dest": "/dist/src/main.js",
+      "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
 }
